--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .carousel-details {
   width: 700px;
   margin: 64px auto;
-  background: #FFFFFF;
+  background: #000000;
   border: 1px solid #D3E2E5;
   border-radius: 20px;
   display: flex;
@@ -17,19 +17,73 @@
   width: 100%;
   height: 300px;
   object-fit: cover;
-  transition: 0.3s ease-in-out;
+  /* transition: 0.3s ease-in-out; */
+  /* animation: fade 1s ease-in-out; */
 }
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slide-left {
+  0% {
+    opacity: 0;
+    transform: translateX(-10%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-right {
+  0% {
+    opacity: 0;
+    transform: translateX(10%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+
+.animation-fade{
+  animation: fade 0.4s ease-in-out;
+  transition: 0.4s ease-in-out;
+  /* left: 0px; */
+}
+
+.animation-slide-left{
+  animation: slide-left 0.6s ease-in-out;
+  transition: 0.6s ease-in-out;
+  /* left: 0px; */
+}
+
+.animation-slide-right{
+  animation: slide-right 0.6s ease-in-out;
+  transition: 0.6s forwards;
+  /* left: 0px; */
+}
+
  
 .carousel-details button {
   border: 0;
   /* height: 88px; */
   background: none;
   cursor: pointer;
-  border-radius: 20px;
+  /* border-radius: 20px; */
   overflow: hidden;
   outline: none;
-  opacity: 0.6;
+  background-color: #fff;
+  /* opacity: 0.6; */
   transition: 0.3s ease-in-out;
+  z-index: 99;
 }
 
 .carousel-details button:active, .carousel-details button:hover {
